tests/kuttl/test-ephemeral-gateway/00-install.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-ephemeral-gateway
spec:
  finalizers:
  - kubernetes
