tests/kuttl/test-ephemeral-gateway/01-pods.yaml
---
apiVersion: cloud.redhat.com/v1alpha1
kind: ClowdEnvironment
metadata:
  name: test-ephemeral-gateway
spec:
  targetNamespace: test-ephemeral-gateway
  providers:
    web:
      port: 8000
      mode: local
      ingressClass: openshift
      gatewayCert:
        localCAConfigMap: test-ephemeral-gateway-cert-ca
        enabled: true
    metrics:
      port: 9000
      mode: operator
      path: "/metrics"
    kafka:
      mode: none
    db:
      mode: none
    logging:
      mode: none
    objectStore:
      mode: minio
    inMemoryDb:
      mode: none
    featureFlags:
      mode: none
  resourceDefaults:
    limits:
      cpu: 400m
      memory: 1024Mi
    requests:
      cpu: 30m
      memory: 512Mi
---
apiVersion: cloud.redhat.com/v1alpha1
kind: ClowdApp
metadata:
  name: puptoo
  namespace: test-ephemeral-gateway
spec:
  envName: test-ephemeral-gateway
  deployments:
  - name: processor
    podSpec:
      image: quay.io/redhat-services-prod/hcm-eng-prod-tenant/clowder-e2e:latest
      readinessProbe:
        failureThreshold: 3
        httpGet:
          path: /healthz
          port: 8000
          scheme: HTTP
        initialDelaySeconds: 10
        periodSeconds: 10
        successThreshold: 1
        timeoutSeconds: 1
      livenessProbe:
        failureThreshold: 3
        httpGet:
          path: /healthz
          port: 8000
          scheme: HTTP
        initialDelaySeconds: 5
        periodSeconds: 10
        successThreshold: 1
        timeoutSeconds: 1
    webServices:
      public:
        enabled: true
        apiPath: puptoo
---
apiVersion: cloud.redhat.com/v1alpha1
kind: ClowdApp
metadata:
  name: puptoo-2paths
  namespace: test-ephemeral-gateway
spec:
  envName: test-ephemeral-gateway
  deployments:
  - name: processor
    podSpec:
      image: quay.io/redhat-services-prod/hcm-eng-prod-tenant/clowder-e2e:latest
      readinessProbe:
        failureThreshold: 3
        httpGet:
          path: /healthz
          port: 8000
          scheme: HTTP
        initialDelaySeconds: 10
        periodSeconds: 10
        successThreshold: 1
        timeoutSeconds: 1
      livenessProbe:
        failureThreshold: 3
        httpGet:
          path: /healthz
          port: 8000
          scheme: HTTP
        initialDelaySeconds: 5
        periodSeconds: 10
        successThreshold: 1
        timeoutSeconds: 1
    webServices:
      public:
        enabled: true
        apiPaths:
        - /api/puptoo1/
        - /api/puptoo2/
---
apiVersion: cert-manager.io/v1
kind: Issuer
metadata:
  name: test-ephemeral-gateway
  namespace: test-ephemeral-gateway
spec:
  selfSigned: {}
---
apiVersion: cert-manager.io/v1
kind: Certificate
metadata:
  name: caddy-cert
  namespace: test-ephemeral-gateway
spec:
  commonName: 36f23107-9b7c-48f6-8d5b-e6691e7dd235
  issuerRef:
    group: cert-manager.io
    kind: Issuer
    name: test-ephemeral-gateway
  privateKey:
    algorithm: ECDSA
    size: 256
  secretName: test-ephemeral-gateway-test-cert
