tests/kuttl/test-ephemeral-gateway/03-delete-env.yaml
---
apiVersion: kuttl.dev/v1beta1
kind: TestStep
delete:
- apiVersion: cloud.redhat.com/v1alpha1
  kind: ClowdEnvironment
  name: test-ephemeral-gateway
