tests/kuttl/test-ephemeral-gateway/03-delete.yaml
---
apiVersion: kuttl.dev/v1beta1
kind: TestStep
delete:
- apiVersion: v1
  kind: Namespace
  name: test-ephemeral-gateway
- apiVersion: cloud.redhat.com/v1alpha1
  kind: ClowdEnvironment
  name: test-ephemeral-gateway
