tests/kuttl/test-ephemeral-gateway/01-assert.yaml
---
apiVersion: kuttl.dev/v1beta1
kind: TestAssert
collectors:
- type: command
  command: bash ../_common/collect-events.sh
  timeout: 10
---
apiVersion: v1
kind: Secret
metadata:
  name: test-ephemeral-gateway-keycloak
  namespace: test-ephemeral-gateway
type: Opaque
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ephemeral-gateway-auth
  namespace: test-ephemeral-gateway
spec:
  rules:
  - host: test-ephemeral-gateway-auth
    http:
      paths:
      - backend:
          service:
            name: test-ephemeral-gateway-keycloak
            port:
              name: keycloak
        path: /
        pathType: Prefix
      - backend:
          service:
            name: test-ephemeral-gateway-mocktitlements
            port:
              name: auth
        path: /auth/realms/redhat-external/apis/service_accounts/v1
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ephemeral-gateway-mocktitlements
  namespace: test-ephemeral-gateway
spec:
  rules:
  - host: test-ephemeral-gateway
    http:
      paths:
      - backend:
          service:
            name: test-ephemeral-gateway-mocktitlements
            port:
              name: auth
        path: /api/entitlements/
        pathType: Prefix
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-ephemeral-gateway-keycloak
  namespace: test-ephemeral-gateway
spec:
  template:
    spec:
      containers:
      - image: quay.io/keycloak/keycloak:23.0.1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-ephemeral-gateway-mbop
  namespace: test-ephemeral-gateway
spec:
  template:
    spec:
      containers:
      - image: quay.io/redhat-services-prod/hcc-fr-tenant/mbop/mbop:097d327
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-ephemeral-gateway-mocktitlements
  namespace: test-ephemeral-gateway
spec:
  template:
    metadata:
      annotations:
        clowder/authsidecar-config: caddy-config-mocktitlements
        clowder/authsidecar-enabled: "true"
        clowder/authsidecar-image: quay.io/redhat-services-prod/hcm-eng-prod-tenant/crc-caddy-plugin:ec15821
        clowder/authsidecar-port: "8090"
    spec:
      containers:
      - image: quay.io/redhat-services-prod/hcm-eng-prod-tenant/mocktitlements-master/mocktitlements-master:27dadf8
---
apiVersion: cert-manager.io/v1
kind: Certificate
metadata:
  name: caddy-cert
  namespace: test-ephemeral-gateway
spec:
  commonName: 36f23107-9b7c-48f6-8d5b-e6691e7dd235
  issuerRef:
    group: cert-manager.io
    kind: Issuer
    name: test-ephemeral-gateway
  privateKey:
    algorithm: ECDSA
    size: 256
  secretName: test-ephemeral-gateway-test-cert
status:
  conditions:
  - message: Certificate is up to date and has not expired
    reason: Ready
    status: "True"
    type: Ready
