tests/kuttl/test-ephemeral-gateway/03-assert.yaml
---
apiVersion: kuttl.dev/v1beta1
kind: TestAssert
collectors:
- type: command
  command: bash ../_common/collect-events.sh
  timeout: 10
---
apiVersion: cloud.redhat.com/v1alpha1
kind: ClowdEnvironment
metadata:
  name: test-ephemeral-gateway
status:
  ready: true
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: puptoo-processor
  namespace: test-ephemeral-gateway
spec:
  template:
    metadata:
      annotations:
        clowder/authsidecar-config: caddy-config-puptoo-processor
        clowder/authsidecar-enabled: "true"
        clowder/authsidecar-port: "8000"
        clowder/authsidecar-image: quay.io/redhat-services-prod/hcm-eng-prod-tenant/crc-caddy-plugin:dd207a6
    spec:
      serviceAccountName: puptoo-processor
status:
  readyReplicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: puptoo-2paths-processor
  namespace: test-ephemeral-gateway
spec:
  template:
    metadata:
      annotations:
        clowder/authsidecar-config: caddy-config-puptoo-2paths-processor
        clowder/authsidecar-enabled: "true"
        clowder/authsidecar-port: "8000"
        clowder/authsidecar-image: quay.io/redhat-services-prod/hcm-eng-prod-tenant/crc-caddy-plugin:dd207a6
    spec:
      serviceAccountName: puptoo-2paths-processor
status:
  readyReplicas: 1
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: puptoo-processor
  namespace: test-ephemeral-gateway
spec:
  ingressClassName: "openshift"
  rules:
  - host: test-ephemeral-gateway
    http:
      paths:
      - backend:
          service:
            name: puptoo-processor
            port:
              name: auth
        path: /api/puptoo/
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: puptoo-2paths-processor
  namespace: test-ephemeral-gateway
spec:
  ingressClassName: "openshift"
  rules:
  - host: test-ephemeral-gateway
    http:
      paths:
      - backend:
          service:
            name: puptoo-2paths-processor
            port:
              name: auth
        path: /api/puptoo1/
        pathType: Prefix
      - backend:
          service:
            name: puptoo-2paths-processor
            port:
              name: auth
        path: /api/puptoo2/
        pathType: Prefix
---
apiVersion: v1
kind: Service
metadata:
  name: puptoo-processor
  namespace: test-ephemeral-gateway
spec:
  selector:
    pod: puptoo-processor
  ports:
  - port: 8000
    targetPort: 8000
    name: public
    appProtocol: http
  - port: 8080
    targetPort: 8080
    name: auth
    appProtocol: http
  - port: 9000
    targetPort: 9000
    name: metrics
    appProtocol: http
---
apiVersion: v1
kind: Service
metadata:
  name: puptoo-2paths-processor
  namespace: test-ephemeral-gateway
spec:
  selector:
    pod: puptoo-2paths-processor
  ports:
  - port: 8000
    targetPort: 8000
    name: public
    appProtocol: http
  - port: 8080
    targetPort: 8080
    name: auth
    appProtocol: http
  - port: 9000
    targetPort: 9000
    name: metrics
    appProtocol: http
